--- a/sections/R语言命令.tex
+++ b/sections/R语言命令.tex
@@ -79,7 +79,23 @@
 
 % \subsection{Graph}
 
+    matrix multiply: \lstinline|%*%|
 
+
+
+\subsection{Basic Statistics Tools}
+\begin{table}[H]
+    \centering
+    \renewcommand\arraystretch{0.9}
+    \begin{tabular}{l|l}
+        \hline
+        Action$\qquad\qquad\qquad\qquad\qquad\qquad\qquad$&Command$\qquad\qquad\qquad\qquad\qquad$\\
+        \hline
+        \textbf{L}inear \textbf{m}odel &\lstinline|lm(yvar~xvar)|\\
+        Show \textbf{summary} & \lstinline|summary()| 
+        \hline
+    \end{tabular}
+\end{table}
 
 \subsection{Useful Packages}
 
