--- a/sections/统计推断.tex
+++ b/sections/统计推断.tex
@@ -18,7 +18,7 @@
 
     where \text{parameter} $\vec{\theta}$ reflect some quantities of population (e.g. mean, variance, etc.), each $\vec{\theta}$ corresponds to a distribution of population $X$.
     
-    Sample space: Def. as $\mathscr{X}=\{\{x_1,x_2,\ldots,x_n\},\forall x_i\}$, then $\{X_i\}\in\mathscr{X}$ is random sample from population $X\sim f(x;\vec{\theta})$.
+    Sample space\index{Sample Space}: Def. as $\mathscr{X}=\{\{x_1,x_2,\ldots,x_n\},\forall x_i\}$, then $\{X_i\}\in\mathscr{X}$ is random sample from population $X\sim f(x;\vec{\theta})$.
 
     
 \subsubsection{Statistics}\label{SubSectionStatistics}
@@ -59,7 +59,7 @@
         \]
         \item Skewness and Kurtosis
         \[
-            \hat{\beta_1}=\frac{m_{n,3}}{m_{n,2}^{3/2}}\qquad \hat{\beta_2}=\frac{m_{n,4}}{m_{n,2}^2}    
+            \hat{g}_1=\frac{m_{n,3}}{m_{n,2}^{3/2}}\qquad \hat{g}_2=\frac{m_{n,4}}{m_{n,2}^2}    -3
         \]
     \end{itemize}
 
@@ -92,7 +92,7 @@
     \end{itemize}
 
     \subsubsection{Exponential Family}\label{SubSectionExponentialFamily}
-        Def. $\mathscr{F}=\{f(x;\vec{\theta}|\vec{\theta}\in\Theta)\}$ is \textbf{Exponential Family} if $f(x;\vec{\theta})$ has the form as
+        Def. $\mathscr{F}=\{f(x;\vec{\theta}|\vec{\theta}\in\Theta)\}$ is \textbf{Exponential Family} if $f(x;\vec{\theta})$ has the form as\index{EF (Exponential Family)}
 \[
     f(x;\vec{\theta})=C(\vec{\theta})h(x)\exp \left[  \sum_{i=1}^k Q_i(\vec{\theta})T_i(x) \right]\quad\vec{\theta}\in\Theta
 \]    
@@ -114,14 +114,14 @@
 \subsubsection{Sufficient and Complete Statistics}\label{SubSectionSufficient_CompleteStatistics}
     Note: For simplification, the following parts denote $\vec{\theta},\vec{T},\ldots$  as $\theta,T,\ldots$ etc.
     \begin{itemize}
-        \item[$\blacktriangleright$] A \textbf{Sufficient Statistic} $T(\vec{X})$ for $\theta$ contains all the information of sample when infer $\theta$, i.e.
+        \item[$\blacktriangleright$] \index{Statistics!Sufficient Statistic}A \textbf{Sufficient Statistic} $T(\vec{X})$ for $\theta$ contains all the information of sample when infer $\theta$, i.e.
         \[
             f(\vec{X};T(\vec{X}))=f(\vec{X};T(\vec{X}),\theta)
         \]
 
         Properties
         \begin{itemize}
-            \item \textbf{Factorization Thm.} $T(\vec{X})$ is sufficient \textbf{if and only if} $f_{\vec{X}}(\vec{x};\theta)=f(\vec{x};\theta)$ can be written as 
+            \item \textbf{Factorization Thm.}\index{Factorization Thm.} $T(\vec{X})$ is sufficient \textbf{if and only if} $f_{\vec{X}}(\vec{x};\theta)=f(\vec{x};\theta)$ can be written as 
             \[
                 f(\vec{x};\theta)=g[t(\vec{x});\theta]h(\vec{x})
             \]            
@@ -142,7 +142,7 @@
 
 
 
-        \item[$\blacktriangleright$] A \textbf{Complete Statistic} $T(\vec{X})$ for $\theta$ satisfies
+        \item[$\blacktriangleright$] A \textbf{Complete Statistic}\index{Statistics!Complete Statistic} $T(\vec{X})$ for $\theta$ satisfies
         \[
             \forall\theta\in\Theta\, ;\,\forall\varphi\text{ satisfies }E[\varphi(T(\vec{X}))]=0\text{, we have }P[\varphi(T)=0;\theta]=1
         \]
@@ -152,7 +152,7 @@
             \int\varphi (t) g_T(t)\,\mathrm{d} t=0  \,\,\forall\, \theta\Rightarrow\varphi(T)=0 \text{  a.s. }
         \]
 
-        i.e. \underline{$\mathrm{span}\{g_T(t);\forall\theta\}$ is a complete sapce}. Or to say that $\nexists$ none-zero $\varphi(t)$ so that $E(\varphi(T))=0$ (unbiased estimation)
+        i.e. \underline{$\mathrm{span}\{g_T(t);\forall\theta\}$ is a complete space}. Or to say that $\nexists$ none-zero $\varphi(t)$ so that $E(\varphi(T))=0$ (unbiased estimation)
 
         \[
             \varphi(T)\neq 0 \,\,\forall \theta\Rightarrow E[\varphi(T(\vec{X}))]\neq 0  
@@ -166,9 +166,9 @@
 
             \item A complete statistic not always exists.
         \end{itemize}
-        \item[$\blacktriangleright$]  An \textbf{Ancillary Statistic} $S(\vec{X})$ is a statistic whose distribution does not depend on $\theta$
+        \item[$\blacktriangleright$]\index{Statistics!Ancillary Statistic}  An \textbf{Ancillary Statistic} $S(\vec{X})$ is a statistic whose distribution does not depend on $\theta$
         
-        \textbf{Basu Thm}: $\vec{X}=(X_1,X_2,\ldots,X_n)$ is sample from $\mathscr{F}=\{f(x;\theta),\theta\in\Theta\}$. $T(\vec{X})$ is a complete and minimal sufficient statistic, $S(\vec{X})$ is ancillary statistic, then $S(\vec{X})\parallel T(\vec{X})$.
+        \textbf{Basu Thm.}\index{Basu Thm.}: $\vec{X}=(X_1,X_2,\ldots,X_n)$ is sample from $\mathscr{F}=\{f(x;\theta),\theta\in\Theta\}$. $T(\vec{X})$ is a complete and minimal sufficient statistic, $S(\vec{X})$ is ancillary statistic, then $S(\vec{X})\parallel T(\vec{X})$.
 
         \item[$\blacktriangleright$] Exponential family: For $\vec{X}=(X_1,X_2,\ldots,X_n)$ from exponential family with canonical form, i.e.
     \[
@@ -219,7 +219,7 @@
         \[
             var(\hat{g}_1)\leq var(\hat{g}_2)  \quad\forall\theta\in\Theta  
         \]
-        \item Mean Squared Error (MSE)
+        \item Mean Squared Error (MSE)\index{MSE (Mean Squared Error)}
         \[
             \text{MSE}=E[(\hat{\theta}-\theta)^2]=var(\hat{\theta})+[Bias(\hat{\theta})]^2
         \]
@@ -228,7 +228,7 @@
         \[
             \text{MSE}=E[(\hat{\theta}-\theta)^2]=var(\hat{\theta})
         \]
-        \item Consistency
+        \item (Weak) Consistency
         \[
             \lim_{n\to\infty}P(|\hat{g}_n(\vec{X})-g(\theta)|\geq \varepsilon)=0\quad\forall\varepsilon>0    
         \]
@@ -237,7 +237,7 @@
 
 
 \subsubsection{Method of Moments}\label{SubSectionMoM}
-    Review: Population moments \& Sample moments
+    Review: Population moments \& Sample moments\index{MoM (Method of Moments)}
     \begin{align*}
         \alpha_k&=E(X^k)&\mu_k&=E[(X-E(X))^k]\\
         a_{n,k}&=\frac{1}{n}\sum_{i=1}^nX_i^k&m_{n,k}&=\frac{1}{n}\sum_{i=1}^n(X_i-\bar{X})^k
@@ -276,7 +276,7 @@
 
 
 \subsubsection{Maximum Likelihood Estimation}\label{SubSectionMLE}
-    For sample $\vec{X}=(X_1,X_2,\ldots,X_n)$ with distribution $f(\vec{x};\theta)$ from $\mathscr{F}=\{f(x;\theta),\theta\in\Theta\}$ , def. \textbf{Likelihood Function} $L(\theta;\vec{x})$, defined on $\Theta$ (as a function of $\theta)$
+    \index{MLE (Maximum Likelihood Estimation)}For sample $\vec{X}=(X_1,X_2,\ldots,X_n)$ with distribution $f(\vec{x};\theta)$ from $\mathscr{F}=\{f(x;\theta),\theta\in\Theta\}$ , def. \textbf{Likelihood Function} $L(\theta;\vec{x})$, defined on $\Theta$ (as a function of $\theta)$
     \[
         L(\theta;\vec{x})=f(\vec{x};\theta)\qquad \theta\in\Theta,\,\vec{x}\in\mathscr{X}    
     \]
@@ -309,7 +309,7 @@
         
     \begin{itemize}
         \item (Depend on the case, not always) unbiased.
-        \item Invariance of MLE: If $\hat{\theta}$ is MLE of $\theta$, invertible function $g(\theta)$, then $g(\hat{\theta})$ is MLE of $g(\theta)$.
+        \item Invariance of MLE\index{Invariance of MLE}: If $\hat{\theta}$ is MLE of $\theta$, invertible function $g(\theta)$, then $g(\hat{\theta})$ is MLE of $g(\theta)$.
         \item MLE and Sufficiency: $T=T(X_1,X_2,\ldots,X_n)$ is a sufficient statistic of $\theta$, if MLE of $\theta$ exists, say $\hat{\theta}$, then $\hat{\theta}$ is a function of $T$, i.e.
         \[  
             \hat{\theta}=\hat{\theta}(\vec{X})=\hat{\theta}^*(T(\vec{X}))    
@@ -356,14 +356,15 @@
         \]
 
 
-\subsubsection{Uniformly Minimum Variance Unbiased Estimate}\label{SubSectionUMVUE}
-        MSE: For $\hat{g}(\vec{X})$ is estimate of $g(\theta)$ ,then MSE
+\subsubsection{Uniformly Minimum Variance Unbiased Estimator}\label{SubSectionUMVUE}
+        \index{UMVUE (Uniformly Minimum Variance Unbiased Estimator)}MSE: For $\hat{g}(\vec{X})$ is estimate of $g(\theta)$ ,then MSE
         \[
             \mathrm{MSE}(\hat{g}(\vec{X}))=E[(\hat{g}(\vec{X})-g(\theta))^2]=var(\hat{g})+[Bias(\hat{g})]^2
         \]
-\begin{point}
+
+        Note:
     Unbiased estimator (i.e. $Bias(\hat{g})=0$) not unique; not always exist.
-\end{point}
+
 
     
 
@@ -376,7 +377,10 @@
             var[\hat{g}(\vec{X})]\leq var[\hat{g}\prime(\vec{X})]    
         \]
 
-        Then $\hat{g}(\vec{X})$ is \textbf{Uniformly Minimum Variance Unbiased Estimate(UMVUE)} of $g(\theta)$
+\begin{point}
+        Then $\hat{g}(\vec{X})$ is \textbf{Uniformly Minimum Variance Unbiased Estimator(UMVUE)} of $g(\theta)$
+\end{point}
+
 
         How to determine UMVUE? (Not an easy task)
         \begin{itemize}
@@ -414,7 +418,7 @@
         \item A UMVUE has to be a function of sufficient statistic.
     \end{itemize}
 
-    \textbf{Lehmann-Scheffé Thm.}: For $\vec{X}=(X_1,X_2,\ldots,X_n)$ from population $X\sim\mathscr{F}=\{f(x,\theta,\vec{\theta\in\Theta})\}$. $T(\vec{X})$ sufficient and complete, and $\hat{g}(T(\vec{X}))$ be an unbiased estimator, then $\hat{g}(T(\vec{X}))$ is the unique UMVUE.
+    \textbf{Lehmann-Scheffé Thm.}\index{LS Thm. (Lehmann-Scheffé Thm.)}: For $\vec{X}=(X_1,X_2,\ldots,X_n)$ from population $X\sim\mathscr{F}=\{f(x,\theta,\vec{\theta\in\Theta})\}$. $T(\vec{X})$ sufficient and complete, and $\hat{g}(T(\vec{X}))$ be an unbiased estimator, then $\hat{g}(T(\vec{X}))$ is the unique UMVUE.
 
     Can be used to construct UMVUE: given $T(\vec{X})$ sufficient and complete and some unbiased estimator $\hat{g}\prime(\theta)$ then 
     \[
@@ -425,18 +429,18 @@
 
 
 
-\item Cramer-Rao Inequality
+\item \textbf{Cramer-Rao Inequality}\index{CR Inequality (Cramer-Rao Inequality)}
 
     Core idea: determine a lower bound of $var(\hat{g})$.
 
     Consider $\theta=\theta$ (One dimension parameter); For $\{X_i\}$ i.i.d. $f(x,\theta)$: def.
     \begin{itemize}
-        \item \textbf{Score function}: Reflects the steepness of likelihood function $f$.
+        \item \textbf{Score function}\index{Score Function}: Reflects the steepness/slope of likelihood function $f$.
         \[
             S(\vec{x};\theta)=\frac{\partial\ln f(\vec{x};\theta)}{\partial\theta}=\sum_{i=1}^n\frac{\partial\ln f(x_i;\theta)}{\partial\theta}
         \]
         \[E[S(\vec{X};\theta)]=0\]
-        \item \textbf{Fisher Information}: Variance of $S(\vec{x};\theta)$, reflects the accuracy to conduct estimation, i.e. reflects information of statistic model.
+        \item \textbf{Fisher Information}\index{Fisher Information}: Variance of $S(\vec{x};\theta)$, reflects the accuracy to conduct estimation, i.e. reflects information of statistic model that sample brings.
         \[
             I(\theta)=E\left[\left(\frac{\partial \ln f(\vec{x};\theta)}{\partial\theta}\right)^2\right]=-E\left[\frac{\partial^2\ln f(\vec{x};\theta)}{\partial \theta^2}\right]
         \]
@@ -484,8 +488,18 @@
     
 \end{enumerate}
 
+
+
+
+
+
 \subsubsection{MoM and MLE in Linear Regression}\label{SubSectionMoM_MLE_LinearRegression}
-    $\bullet$ Linear Regression Model(1-dimension case):
+    \textbf{Note:} More detailed knowledge see sec.\ref{SecLinearRegressionAnalysis} Linear Regression Analysis.
+
+\begin{point}
+    Linear Regression Model(1-dimension case):
+\end{point}
+
     \[
         y_i=\beta_0+\beta_1x_0+\epsilon_i    
     \]
@@ -500,30 +514,51 @@
     Mission: use data $\{(x_i,y_i)\}$ to estimate $\beta_0,\beta_1$(i.e. regression line), and error $\epsilon_i$.
 
     \begin{enumerate}
-        \item OLS: Take $\beta_0,\beta_1$  so that MSE min, i.e.
+        \item OLS (Ordinary Least Squares)\index{OLS (Ordinary Least Squares)}: Take $\beta_0,\beta_1$ so that MSE min, i.e. SSE min
         \[
             (\hat{\beta_0},\hat{\beta_1})=\arg\min\sum_{i=1}^n(y_i-\beta_0-\beta_1 x_i)^2    
         \]
 
-        Solution:
-        \[\begin{cases}
-            \hat{\beta_0}&=\bar{y}-\beta_1\bar{x}\\
-            \hat{\beta_1}&=\dfrac{\sum_{i=1}^n(x_i-\bar{x})(y_i-\bar{y})}{\sum_{i=1}^n(x_i-\bar{x})^2}=\{\sum_{i=1}^n(x_i-\bar{x})^2\}^{-1}\{\sum_{i=1}^n(x_i-\bar{x})(y_i-\bar{y})\}
-        \end{cases}\]
+        (Express in Matrix Notation (eqa.\ref{EqaMatrixRepreOfSSE}), so that it can be generalized to multidimensional case) SSE can be expressed as the \textbf{Excliean Distance }between $ \{y_i\} $ and $ \{\hat{\beta}_0+\hat{\beta}_1x_i\}  $, i.e.
+        \[
+            \arg\min d(y
+            ,X \hat{\beta})
+        \]
+
+         i.e. $ \hat{\beta} $ is the Projection of $y $ onto hyperplane $ X $, then
+         \[
+            ( X\hat{\beta} )^T(y- X\hat{\beta})=0 \Rightarrow \hat{\beta}=(X^TX)^{-1}X^Ty 
+         \]
+        
+
+        Solution for 2-D case:
+        \[
+            \hat{\beta}=\begin{bmatrix}
+                \hat{\beta}_0\\ \hat{\beta}_1
+            \end{bmatrix}
+            =
+            \begin{bmatrix}
+            \bar{y}- \hat{\beta}_1\bar{x}\\
+            \dfrac{\sum\limits_{i=1}^n(x_i-\bar{x})(y_i-\bar{y})}{\sum\limits_{i=1}^n(x_i-\bar{x})^2}
+            \end{bmatrix}
+        \]
+
+        % =\{\sum\limits_{i=1}^n(x_i-\bar{x})^2\}^{-1}\{\sum\limits_{i=1}^n(x_i-\bar{x})(y_i-\bar{y})\}
 
         So get regression line:$y=\hat{\beta_0}+\hat{\beta_1}x$
 
         Def. Residuals
-        \[\hat{\epsilon}_i=y_i-\hat{y_i}=y_i-(\hat{\beta_0}+\hat{\beta_1}x_i)\]
+        \[e_i=\hat{\epsilon}_i=y_i-\hat{y_i}=y_i-(\hat{\beta_0}+\hat{\beta_1}x_i)\]
 
 
         Residuals can be used to estimate $\epsilon_i$: $E[(\epsilon_i)^2]=\sigma^2$
-        \[\hat{\sigma}^2=\frac{1}{n-2}\sum_{i=1}^n(y_i-\hat{\beta_0}-\hat{\beta_1}x_i)\]
-        \item MoM: Consider r.v. $\epsilon\sim f(\varepsilon;x,y,\beta_0,\beta_1)$, sample $\{\epsilon_i|\epsilon_i=y_i-\beta_0-\beta_1x_i\}$, then obviously
+        \[\hat{\sigma^2}=\frac{1}{n-2}\sum_{i=1}^n(y_i-\hat{\beta_0}-\hat{\beta_1}x_i)\]
+
+    \item MoM: Consider r.v. $\epsilon\sim f(\varepsilon;x,y,\beta_0,\beta_1)$, sample $\{\epsilon_i|\epsilon_i=y_i-\beta_0-\beta_1x_i\}$, then obviously
         \[\bar{\epsilon}=\bar{y}-\beta_0-\beta_1\bar{x}\]
 
         Take moment estimate of $\epsilon$, we have 
-        \[E(\epsilon_i)=0\qquad E(\epsilon_i x_i)=0\text{(note that)}E(\epsilon|x)=0\]
+        \[E(\epsilon_i)=0\qquad E(\epsilon_i x_i)=0\text{ (note that}E(\epsilon|x)=0)\]
         \[\text{i.e.}\begin{cases}
             
             \dfrac{1}{n}\sum_{i=1}^n(y_i-\beta_0-\beta_1x_i)=0\\
@@ -541,12 +576,34 @@
         Moment estimate of $\sigma^2$
         \[\hat{\sigma}^2_n=\frac{1}{n}\sum_{i=1}^n(y_i-\hat{\beta}_0-\hat{\beta}_1x_i)\]
 
-        \item MLE: Assume $\epsilon_i\sim N(0,\sigma^2)$, then $y_i|x_i\sim N(\beta_0+\beta_1x_i,\sigma^2)$. Get likelihood function:
+    \item MLE: Assume $\epsilon_i\sim N(0,\sigma^2)$, then $y_i|x_i\sim N(\beta_0+\beta_1x_i,\sigma^2)$. Get likelihood function:
         \[
             L(\beta_0,\beta_1,\sigma^2;x_1,\ldots,x_n,y_1,\ldots,y_n)=(2\pi\sigma^2)^{-\frac{n}{2}}\exp\left[-\frac{\sum_{i=1}^n(y_i-\beta_0-\beta_1x_i)}{2\sigma^2}\right]  
         \]
 
-        Take differentiation, also get the same result.
+    Log-likelihood:
+    \[
+        l(\beta _0,\beta _1,\sigma ^2;x_1,\ldots,x_n,y_1,\ldots,y_n)=-\dfrac{n}{2} \ln(2\pi\sigma ^2)-\dfrac{1}{2\sigma ^2}\sum_{i=1}^n(y_i-\beta _0-\beta _1x_i)^2
+    \]
+
+    MLE, use Fermat Lemma:
+
+\[
+    \begin{cases}
+        \dfrac{\partial^{} l}{\partial \beta _0^{}}=0&\Rightarrow -\dfrac{1}{\sigma ^2}{\displaystyle\sum_{i=1}^n(y_i-\beta _0-\beta _1x_i)}=0\\
+        \dfrac{\partial^{} l}{\partial \beta _1^{}}=0&\Rightarrow -\dfrac{1}{\sigma ^2}{\displaystyle\sum_{i=1}^nx_i(y_i-\beta _0-\beta _1x_i)}=0\\
+        \dfrac{\partial^{} l}{\partial \sigma^2}=0&\Rightarrow -\dfrac{n}{2}\dfrac{1}{\sigma ^2}+\dfrac{1}{2(\sigma ^2)^2} {\displaystyle\sum_{i=1}^n(y_i-\beta _0-\beta _1x_i)}=0
+    \end{cases} 
+\]
+
+    Solution:
+    \begin{align*}
+        \hat{\beta_0}&=\bar{y}-\beta_1\bar{x}\\
+        \hat{\beta_1}&=\dfrac{\sum_{i=1}^n(x_i-\bar{x})(y_i-\bar{y})}{\sum_{i=1}^n(x_i-\bar{x})^2}\\
+        \hat{\sigma}^2_n&=\frac{1}{n}\sum_{i=1}^n(y_i-\hat{\beta}_0-\hat{\beta}_1x_i)
+    \end{align*}
+    
+    
     \end{enumerate}
 
 \begin{point}
@@ -561,8 +618,8 @@
     Denote: $\vec{\beta}=(\beta_0,\beta_1,\ldots,\beta_p),\, \vec{x}_i=(1,x_{i1},x_{i2},\ldots,x_{ip})$, then for each $i$: $y_i=x_i^T\beta+\epsilon_i$
 
     Further denote: Matrix form:
-    \[
-        Y=\begin{pmatrix}
+    \begin{equation}\label{EqaMatrixRepreOfSSE}
+        y=\begin{pmatrix}
             y_1\\
             y_2\\
             \vdots\\
@@ -589,7 +646,7 @@
             \epsilon_n
         \end{pmatrix}
         =X\vec{\beta}+\vec{\epsilon}
-    \]
+    \end{equation}
 
     Basic Assumptions: Gauss-Markov Assumptions
     \begin{itemize}
@@ -600,20 +657,22 @@
     \end{itemize}
 
     Residuals:
-    \[\hat{\epsilon}_i=y_i-\hat{y}_i=y_i-x_i^T\beta\]
+    \[e_i=\hat{\epsilon}_i=y_i-\hat{y}_i=y_i-x_i^T\beta\]
 
-    Def. Residual Sum of Squares (RSS)
-    \[\mathrm{RSS}=\sum_{i=1}^n\hat{\epsilon}_i^2=\sum_{i=1}^n(y_i-x_i^T\beta)^2\]
+    Def. Error Sum of Squares (SSE)
+    \[\mathrm{RSS}=\sum_{i=1}^ne_i^2=\sum_{i=1}^n(y_i-x_i^T\beta)^2\]
 
-    Estimator exists and unique:($\hat{\sigma}^2$ after bias correction)
-    \begin{align*}
-        \hat{\beta}&=(X^TX)^{-1}(X^TY)\\
-        \hat{\sigma}_n^2&=\frac{1}{n}\sum_{i=1}^n(y_i-x^T_i\hat{\beta})^2\\
-        \hat{\sigma}^2&=\frac{1}{n-p-1}\sum_{i=1}^n(y_i-x_i^T\hat{\beta})^2
-    \end{align*}
+    Estimator exists and unique:($\hat{\sigma}^2$ is after bias correction)
+    \begin{align}
+        \hat{\beta}&=(X^TX)^{-1}X^Ty\notag \\
+        \hat{\sigma}_n^2&=\frac{1}{n}\sum_{i=1}^n(y_i-x^T_i\hat{\beta})^2 \notag\\ 
+        \hat{\sigma}^2&=\frac{1}{n-p-1}\sum_{i=1}^n(y_i-x_i^T\hat{\beta})^2\label{EqaEstimatorSigmaWithDoF}
+    \end{align}
 
-\subsubsection{Kernel Density Estimate}\label{SubSectionKernelDensityEstimation}
-    Given random sample $\{X_i\}$. Def. Empirical Distribution Function
+    
+
+\subsubsection{Kernel Density Estimation}\label{SubSectionKernelDensityEstimation}
+    \index{KDE (Kernel Density Estimation)}Given random sample $\{X_i\}$. Def. Empirical Distribution Function
     \begin{equation}\label{empiricaldisreibutionfunction}
         \hat{F}_n(x)=\frac{1}{n}\sum_{i=1}^nI_{(-\infty,x]}(X_i) 
     \end{equation}
@@ -658,7 +717,7 @@
     Interval Estimation: to estimate $g(\theta)$, give \textbf{two} estimators $\hat{g}_1(\vec{X}),\, \hat{g}_2(\vec{X})$ defined on $\mathscr{X}$ as the two ends of interval (i.e. give an interval $[\hat{g}_1(\vec{X}),\, \hat{g}_2(\vec{X})]$), then random interval $[\hat{g}_1(\vec{X}),\, \hat{g}_2(\vec{X})]$ is an \textbf{Interval Estimation} of $g(\theta)$.
 
     \subsubsection{Confidence Interval}\label{SubSectionConfidenceInterval}
-    How to judge an interval estimation?
+    \index{CI (Confidence Interval)}How to judge an interval estimation?
     \begin{itemize}
         \item Reliability
         \[P(g(\theta)\in[\hat{g}_1,\hat{g}_2])\]
@@ -681,9 +740,9 @@
 
     then $[\hat{g}_1,\hat{g}_2]$ is a \textbf{Confidence Interval} for $g(\theta)$, with \textbf{Confidence Level} $1-\alpha$. 
     
-    \textbf{Confidence Coefficient}:
+    \textbf{Confidence Coefficient}\index{Confidence Coefficient}:
     \[\inf_{\forall\theta\in\Theta}P(
-        \theta\in\Theta
+        \theta\in\mathrm{CI}
     )\]
 
     Other cases:
@@ -704,7 +763,7 @@
 \subsubsection{Pivot Variable Method}\label{SubSectionPivotVariableMethod}
     Idea: Based on point estimation, construct a new variable and thus find the interval estimation.
 
-    Def. \textbf{Pivot Variable} $T$, satisfies: 
+    Def. \textbf{Pivot Variable}\index{Pivot Variable} $T$, satisfies: 
     \begin{itemize}[itemsep= -2 pt,parsep= -2 pt]
         \item Expression of $T$ contains $\theta$ (thus $T$ is not a statistic).
         \item Distribution of $T$ independent of $\theta$.
@@ -1023,7 +1082,7 @@
 
 
 \subsection{Hypothesis Testing}\label{SectionHypothesisTesting}
-    Hypothesis is a statement about the characteristic of population, e.g. distribution form, parameters, etc. 
+    \index{HT (Hypothesis Testing)}Hypothesis is a statement about the characteristic of population, e.g. distribution form, parameters, etc. 
     
     Mission: Use sample to test the hypothesis, i.e. judge whether population has some characteristic.
 
@@ -1034,6 +1093,11 @@
     \begin{itemize}[topsep = -3 pt]
         \item Null Hypothesis $H_0$ \& Alternative Hypothesis $H_1$: Wonder whether a statement is true. Def. \textbf{Null Hypothesis}: $H_0:\theta\in\Theta_0\subset\Theta$, \textbf{a statement that we try to reject based on sample}; $H_1:\theta\in\Theta_1=\Theta-\Theta_0$ is \textbf{Alternative Hypothesis}.
         
+\begin{point}
+    Note: \textbf{Cannot} exchange $ H_0 $ and $ H_1 $, because when the evidence is ambiguity, we have to accept $ H_0 $, regardless of what $ H_0 $ is. So it is \textbf{very important} to pick the proper $ H_0 $.
+\end{point}
+
+
         Thus Hypothesis Testing:
         \[
             H_0:\theta\in\Theta_0\longleftrightarrow H_1:\theta\in\Theta_1
@@ -1043,7 +1107,7 @@
         \[R\subset\mathscr{X}\text{: reject } H_0 \text{ if } \vec{X}\in R\]
 
         Acceptance Region: accept $H_0$ if $\vec{X}\in R^C$
-        \item Test Function: Describe how to make a decision.
+        \item Test Function\index{Test Function}: Describe how to make a decision.
         \begin{itemize}
             \item Continuous Case:
         \[
@@ -1086,28 +1150,32 @@
             &$H_1$&Type II Error&$\surd$\\ 
             \hline
         \end{tabular}
+        \caption{'Confusion Matrix'}
     \end{table}
 
 
         Impossible to make probability of Type I \& II Error small simultaneously, how to pick a proper test $\varphi(\vec{x})$? 
         
-        \textbf{Neyman-Pearson Principle}: First control $\alpha\leq\alpha_0$, then take $\min \beta$.
+\begin{point}
+            \textbf{Neyman-Pearson Principle}: First control $\alpha\leq\alpha_0$, then take $\min \beta$.
+\end{point}
+
 
         How to determine $\alpha_0$? Depend on specific problem.\footnote{In most cases, take $\alpha_0=0.05$.}
 
         \item $p$-value: probability to get larger bias than observed $\vec{x}_0$ \uline{under $H_0$.}
         
-        For reject region $R=\{\vec{X}|T(\vec{X})\geq C\},$ $p$-value:
+        e.g. For reject region $R=\{\vec{X}|T(\vec{X})\geq C\},$ $p$-value:
         \[
             p(\vec{x})=P[T(\vec{X})\geq t(\vec{x}_0)|H_0]
         \]
 
 
-        Remark: Under $H_0$, the probability to get a worse result than $\vec{x}_0$.
+        Remark: Under $H_0$, the probability to get a \textbf{worse} result than $\vec{x}_0$.
         
         Rule: Reject $H_0$ if $p(\vec{x}_0)\leq\alpha_0$
 
-        \item Power Function: (when $H_0$ is given), probability to reject $H_0$ by sampling.
+        \item Power Function\index{Power Function}: (when $H_0$ is given), probability to reject $H_0$ by sampling.
         \[
             \pi(\theta)=\begin{cases}
                 P(\text{type I error}),& \theta\in\Theta_0\\
@@ -1125,7 +1193,7 @@
             \pi(\theta)=E[\varphi(\vec{X})|\theta]
         \]
 
-        A nice test: $\pi(\theta)$ small under $H_0$, large under $H_1$.
+        A nice test: $\pi(\theta)$ small under $H_0$, large under $H_1$ (and grows very fast at the boundary of $ H_0 $ and $ H_1 $).
         \end{itemize}
 
         \begin{point}
@@ -1138,7 +1206,15 @@
             \item Propose $H_0\,\&\, H_1$.
             \item Determine $R$ (usually in the form of a statistic, e.g. $R=\{\vec{X}:T(\vec{X})\geq c\}$).
             \item Select a proper $\alpha$ (to determine $c$).
-            \item Sampling, get sample (as well as $t(\vec{x})$), compare with $R$ and determine whether to reject/accept $H_0$
+            \item Sampling, get sample (as well as $t(\vec{x})$), then 
+            \begin{itemize}[topsep=-1pt,itemsep=-2pt]
+                \item compare with $R$ and determine whether to reject/accept $H_0$, or
+                \item calculate $ p $-value and determine whether to reject/accept$ H_0 $
+            \end{itemize}
+            
+                
+            
+
         \end{enumerate}
 
 % \subsubsection{Hypotheses Testing for Common Distributions}
@@ -1156,7 +1232,7 @@
     Definition of necessary statistics see section \hyperref[SubSectionConfidenceIntervalForDistributions]{\ref{SubSectionConfidenceIntervalForDistributions}}.
 
     \begin{enumerate}
-        \item Single normal population:
+        \item Single normal population:\index{$ t $-test}
 
         \begin{table}[H]
             \centering
@@ -1231,6 +1307,7 @@
 \end{enumerate}
 
 \subsubsection{Likelihood Ratio Test}\label{SubSectionLRT}
+    \index{LRT (Likelihood Ratio Test)}
     Idea: To test $H_0:\theta\in\Theta_0\longleftrightarrow H_1:\theta\in\Theta_1$ known $\vec{x}$, examine the likelihood function $L(\theta;\vec{x})$ and \textbf{compare} $L_{\theta\in\Theta_0}$ and $L_{\theta\in\Theta}$ to see the likelihood that $H_0$ is true.
 
     Def. \textbf{Likelihood Ratio} (LR):
@@ -1260,14 +1337,14 @@
     \]
 
 \subsubsection{Uniformly Most Powerful Test}\label{SUbSectionUMP}
-    Idea: Neyman-Pearson Principle: control $\alpha$, find $\min\beta$. i.e. control $\alpha$, find $\max\pi(\theta)$
+    \index{UMPT (Uniformly Most Powerful Test)}Idea: Neyman-Pearson Principle: control $\alpha$, find $\min\beta$. i.e. control $\alpha$, find $\max\pi(\theta)$
 
     Def. \textbf{Uniformly Most Powerful Test} (UMP) $\varphi_{\mathrm{UMP}}$ with level of significance $\alpha$ satisfies
     \[
         \pi_{\mathrm{UMP}}(\theta)\geq\pi(\theta),\,\forall\theta\in\Theta_1
     \]
 
-    \textbf{Neyman-Pearson Lemma}: For $\vec{X}=(X_1,X_2,\ldots,X_n)$ i.i.d. from $f(\vec{x};\theta)$. 
+    \textbf{Neyman-Pearson Lemma}\index{NP-Lemma (Neyman-Pearson Lemma)}: For $\vec{X}=(X_1,X_2,\ldots,X_n)$ i.i.d. from $f(\vec{x};\theta)$. 
     
     Test hypothesis $H_0:\theta=\theta_0\longleftrightarrow H_1:\theta=\theta_1$. Def. test function $\varphi$ as:
     \begin{equation}\label{UMPtestfunction}
@@ -1381,7 +1458,7 @@
             \item Drawback: ignores magnitudes.
         \end{itemize}
         
-        \item Wilcoxon Signed Rank Sum Test: Improvement of Sign Test. Base on order statistics.
+        \item \index{WSRT (Wilcoxon Signed Rank Sum Test)}Wilcoxon Signed Rank Sum Test: Improvement of Sign Test. Base on order statistics.
         
         Order Statistics of $Z_i$: $Z_{(1)}<Z_{(2)}<\ldots<Z_{(n)}$, where each $Z_{(j)}$ corresponds to some $Z_i$, denote as $Z_i=Z_{(R_i)}$, then $R_i$ is the rank of $Z_i$.\footnote{If some $X_i,X_j,\ldots$ equal, then take same rank $R=\mathrm{mean}\{R_i,R_j,\ldots\}$.}
         
@@ -1468,7 +1545,7 @@
 
 
         \item Contingency Table Independence \& Homogeneity Test
-        
+        \index{Contingency Table}
  
 \begin{itemize}
     \item Independence Test:
@@ -1544,7 +1621,7 @@
     Test $H_0:\text{exists }\mu\,\&\, \sigma^2$ such that $Y_i$ i.i.d. $\sim N(\mu,\sigma^2)$.
 
     \begin{itemize}
-        \item Kolmogorov-Smirnov Test: Assume $\vec{X}$ form population CDF $F(x)$, test $H_0:F(x)=F_0(x)$(where can take $F_0=\Phi$ or some other known CDF).
+        \item Kolmogorov-Smirnov Test\index{K-S Test (Kolmogorov-Smirnov Test)}: Assume $\vec{X}$ form population CDF $F(x)$, test $H_0:F(x)=F_0(x)$(where can take $F_0=\Phi$ or some other known CDF).
         
         use $F_n(x)$ (as defined in eqa.\ref{empiricaldisreibutionfunction}) as approx. to $F(x)$, test
         \[
@@ -1558,7 +1635,7 @@
             p(d_n)=P(D_n>d_n|H_0)<\alpha
         \]
 
-        \item Shapiro-Wilk Test:
+        \item Shapiro-Wilk Test:\index{S-W Test (Shapiro-Wilk Test)}
         
         Test $H_0:\text{exists }\mu\,\&\, \sigma^2$ such that $X_i$ i.i.d. $\sim N(\mu,\sigma^2)$.
 
