--- a/summary.tex
+++ b/summary.tex
@@ -20,11 +20,13 @@
 \usepackage{minted}%代码环境设置
 \usepackage{fontspec}%字体设置
 \usepackage{color,xcolor}%颜色设置
+\usepackage{titlesec}%标题格式设置
+\usepackage{makeidx}\makeindex%索引 编译命令 makeindex summary.idx
 
 
 
 %页边距设置
-\usepackage[left=0.5in,right=0.5in,top=0.81in,bottom=0.8in]{geometry}
+\usepackage[left=0.5in,right=0.5in,top=0.7in,bottom=0.57in]{geometry}
 
 %段行设置
 \linespread{1.4}%行距
@@ -64,6 +66,21 @@
     emph={TRUE,FALSE,NULL,NAN,NA,\$,<-,},emphstyle=\color{CodeBlue2}, %其他高亮
 }
 
+%节标题格式设置
+\titleformat{\section}[block]{\centering\Large\bfseries}{Chapter. \Roman{section} }{1em}{}[]
+\titleformat{\subsection}[block]{\large\bfseries}{Section \arabic{section}.\arabic{subsection} }{1em}{}[]
+% \titleformat{\subsubsection}[block]{\normalsize\bfseries}{    \arabic{subsection}-\alph{subsubsection}}{1em}{}[]
+% \titleformat{\paragraph}[block]{\small\bfseries}{[\arabic{paragraph}]}{1em}{}[]
+
+% \\titleformat{\\sectioncommand}[shape]{format}{title-label}{sep}{before-title}[after-title]
+
+
+
+
+%SumatraPDF反向搜索命令行
+%"C:\Users\彭拓锐Vincent\AppData\Local\Programs\Microsoft VS Code\Code.exe" "C:/Users/彭拓锐Vincent/AppData/Local/Programs/Microsoft VS Code\resources\app\out\cli.js" -r -g "%f:%l"
+
+
 
 
 \begin{titlepage}
@@ -79,21 +96,25 @@
 \newpage
 
 
-\include{sections/初等概率论.tex}
+\include{sections/初等概率论}
 \newpage
 
-\include{sections/统计推断.tex}
+\include{sections/统计推断}
 \newpage
 
-% \include{sections/R.tex}
-% \newpage
+ \include{sections/R}
+ \newpage
 
-\include{sections/线性回归分析.tex}
+\include{sections/线性回归分析}
 \newpage
 
-\include{sections/多元统计分析.tex}
+\include{sections/多元统计分析}
 \newpage
 
+
+
+\newpage
+\printindex
 
 
 \end{document}
